--- a/AIAgentCryptoTrading.Api/AIAgentCryptoTrading.Api.csproj
+++ b/AIAgentCryptoTrading.Api/AIAgentCryptoTrading.Api.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AIAgentCryptoTrading.Core\AIAgentCryptoTrading.Core.csproj" />
     <ProjectReference Include="..\AIAgentCryptoTrading.Backtesting\AIAgentCryptoTrading.Backtesting.csproj" />
+    <ProjectReference Include="..\AIAgentCryptoTrading.DataCollector\AIAgentCryptoTrading.DataCollector.csproj" />
   </ItemGroup>
+  
 
 </Project>
