make the connection back and frontend to crypto crurrencies

--- a/AIAgentCryptoTrading.StrategyEngine/AIAgentCryptoTrading.StrategyEngine.csproj
+++ b/AIAgentCryptoTrading.StrategyEngine/AIAgentCryptoTrading.StrategyEngine.csproj
@@ -5,6 +5,12 @@
     <ProjectReference Include="..\AIAgentCryptoTrading.DataCollector\AIAgentCryptoTrading.DataCollector.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+    <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="4.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
