--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,18 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "concurrently": "^9.1.2",
+    "popper.js": "^1.16.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
-    "rechart": "^0.0.1",
     "recharts": "^2.15.2",
     "web-vitals": "^2.1.4"
   },
@@ -45,8 +47,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "concurrently": "^7.6.0"
+  "overrides": {
+    "lodash": "^4.17.21"
   }
 }
-
